<resources>
    <string name="app_name">TipCalculatorKotlin</string>

    <string-array name="guests_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtotal_text">Subtotal:</string>
    <string name="_100_base_text">$100</string>
    <string name="_0_percent">0%</string>
    <string name="_30_percent">30%</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="_25">25%</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="total_with_tip">Total With Tip:</string>
    <string name="guests">Guests:</string>
    <string name="next"><![CDATA[NEXT>]]></string>
</resources>